--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>My First Webpage</title>
   </head>
 
-  <body>
-  </body>
+  <body></body>
 </html>
