--- a/index.html
+++ b/index.html
@@ -5,5 +5,18 @@
     <title>My First Webpage</title>
   </head>
 
-  <body></body>
+  <body>
+    <p>Hello, World</p>
+    <h1>Hello, World</h1>
+    <h2>Hello, World</h2>
+    <em>Hello, World</em>
+    <div><span>Hello, World</span></div>
+    <!-- this is commented out -->
+    <ol>
+      <li>Hello, World</li>
+    </ol>
+    <ul>
+      <li>Hello, World</li>
+    </ul>
+  </body>
 </html>
